# fastapi-scada

./: .dockerignore  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
.github/prompts/: cache-system.prompt.md  mqtt-handle.prompt.md  websocket.prompt.md
.github/workflows/: deploy.yml
app/: background_tasks.py  main.py  pyproject.toml
app/crud/: audit.py  device.py  firmware.py  report.py  tenant.py  user.py
app/database/: mongo.py  redis.py
app/models/: alert.py  audit.py  auth.py  device.py  report.py  user.py
app/routers/: __init__.py  audit.py  auth.py  device.py  firmware.py  mqtt.py  report.py  tenant.py  user.py  websocket.py
app/schema/: device.py  user.py
app/services/: alert.py  cache_service.py  mqtt.py  status_manager.py
app/utils/: __init__.py  auth.py  config.py  logging.py
