[project]
name = "FastAPI Backend for SCADA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic>=2.10.4",
    "pymongo>=4.10.1",
    "python-decouple==3.8",
    "python-jose==3.3.0",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.34.0",
]
